--- a/Software/index.html
+++ b/Software/index.html
@@ -101,7 +101,7 @@ $(document).ready(function () {
 				<h1 class="text">Temperature</h1>
  			
  				<div class="panel panel-default">
-  					<div class="panel-body">Temp here</div>
+  					<div class="panel-body" id="temp1">Temp here</div>
 				</div>
 
 				<h1 class="text">Light</h1>
